Fix alignment of legend and buttons

--- a/src/cream.css
+++ b/src/cream.css
@@ -257,6 +257,10 @@ button:hover {
 }
 
 @media screen and (min-width: 34rem) {
+  legend {
+    margin-left: calc(var(--label-width) + 1rem);
+  }
+
   label {
     display: inline-block;
     text-align: right;
@@ -283,7 +287,7 @@ button:hover {
   }
 
   button:first-of-type {
-    margin-left: calc(var(--label-width) + 1.25rem);
+    margin-left: calc(var(--label-width) + 1rem);
   }
 
   .col-row {
